"implemented spring security and JWT role based access"